# slmcontrol

./: .gitignore  404.html  LICENSE  README.md  citation.cff  index.html  mkdocs.yml  objects.inv  pyproject.toml  pyproject_old.toml  runtests.sh
docs/: README.md  explanation.md  index.md  quickstart.md  reference.md  tutorials.md
explanation/: index.html
javascripts/: katex.js
quickstart/: index.html
reference/: index.html
src/slmcontrol/: __init__.py  cameras.py  hologram.py  inverse_functions.py  slm.py  slm_new.py  slm_opencv.py  slm_tkinter.py  structures.py  zernike.py
src/slmcontrol/linear_combination/: linear_combination_1.py  linear_combination_2.py  linear_combination_3.py
src/test/: test_hologram.py  test_slm.py  test_slmcontrol.py  test_structures.py  test_zernike.py
templates/: config.ini  config_template.ini  gui.ipynb  mwe.py  mwe_config.py
tests/: conftest.py  hologram_test.py  slm_test.py  structures_test.py  test_hologram.py  test_slm.py  test_structures.py  test_zernike.py  zernike_test.py
tutorials/: index.html
