[project]
name = "slmcontrol"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Marcos Gil", email = "marcosgildeoliveira@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "juliacall>=0.9.23",
    "juliapkg>=0.1.14",
    "numpy>=2.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
