[project]
name = "slmcontrol"
version = "0.1.0"
description = "Add your description here"
readme = "docs/README.md"
authors = [
    { name = "Marcos Gil", email = "marcosgildeoliveira@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "juliacall>=0.9.23",
    "juliapkg>=0.1.14",
    "numpy>=1.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
  ".", "/src"
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]
